--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,27 +9,15 @@ layout: default
     <h1 class="app__name">{{ site.data.app.name }}</h1>
     <p class="app__description">{{ site.data.app.description }}</p>
     <div class="app__buttons app__buttons--desktop">
-      {% if site.data.app.android != false %}
-      <a href="{{ site.data.app.android }}" class="app__button-play" target="_blank"><img src="/assets/images/google-play-badge.png" alt="Get on Google Play"></a>
-      {% endif %}
       {% if site.data.app.iOS != false %}
       <a href="{{ site.data.app.iOS }}" class="app__button-ios" target="_blank"><img src="/assets/images/ios.svg" alt="Get on Appstore"></a>
-      {% endif %}
-      {% if site.data.app.web != false %}
-      <a href="{{ site.data.app.web }}" class="app__button-web" target="_blank"><img src="/assets/images/pwa-badge.png" alt="Go to website"></a>
       {% endif %}
     </div>
   </div>
 </header>
 <div class="app__buttons app__buttons--mobile container">
-  {% if site.data.app.android != false %}
-  <a href="{{ site.data.app.android }}" class="app__button-play" target="_blank"><img src="/assets/images/google-play-badge.png" alt="Get on Google Play"></a>
-  {% endif %}
   {% if site.data.app.iOS != false %}
   <a href="{{ site.data.app.iOS }}" class="app__button-ios" target="_blank"><img src="/assets/images/ios.svg" alt="Get on Appstore"></a>
-  {% endif %}
-  {% if site.data.app.web != false %}
-  <a href="{{ site.data.app.web }}" class="app__button-web" target="_blank"><img src="/assets/images/pwa-badge.png" alt="Go to website"></a>
   {% endif %}
 </div>
 <section class="app__screenshots app__section">
@@ -52,7 +40,7 @@ layout: default
     <p>{{ site.data.app.full_description }}</p>
   </div>
 </section>
-<section class="app__featured app__section container">
+<!-- <section class="app__featured app__section container">
   <h2 class="app__section-title">{{ site.data.strings.app.featured }}</h2>
   <div class="app__featured-content">
     {% for company in site.data.app.companies %}
@@ -61,4 +49,4 @@ layout: default
     </a>
     {% endfor %}
   </div>
-</section>
+</section> -->
